objects/expense_members__c.object
<CustomObject>
    <fields>
        <fullName>Member__c</fullName>
        <label>Member</label>
        <referenceTo>member__c</referenceTo>
        <relationshipLabel>expense members</relationshipLabel>
        <relationshipName>expense_members</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>contribution_amount__c</fullName>
        <label>contribution amount</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>email__c</fullName>
        <label>email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>expenses__c</fullName>
        <label>Expense</label>
        <referenceTo>expense__c</referenceTo>
        <relationshipLabel>expense members</relationshipLabel>
        <relationshipName>expense_members</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>expense member</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>A-{00000}</displayFormat>
        <label>expense id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>expense members</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>